--- a/catalog/templates/products_list.html
+++ b/catalog/templates/products_list.html
@@ -12,8 +12,7 @@
                         <p class="card-text">{{ product.name }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                <a class="btn btn-primary" href="{% url 'catalog:products_detail' product.pk %}" role="button">Посмотреть</a>
                             </div>
                             <small class="text-body-secondary">9 mins</small>
                         </div>
